--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body {
 @media (max-width: 768px) {
     .container {
         padding: 15px;
-        max-width: 100%;
+        width: 100%;
         height: auto;
     }
 
